Fix request #29220: `pre` content shouldn't overflow the frame
You can test in an embedded document containing code:
* Using the wide view, scrollbars shouldn't be visible
* Using the narrow view, code should be horizontally
scrollable

--- a/src/themes/tlp/src/scss/components/_typography.scss
+++ b/src/themes/tlp/src/scss/components/_typography.scss
@@ -220,6 +220,7 @@ pre {
     @extend %tlp-code;
 
     padding: 5px 3px 5px calc(var(--tlp-medium-spacing) / 2);
+    overflow: auto;
     border-left: 5px solid var(--tlp-main-color-transparent-50);
 
     code {
